# Agentability

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  build_platform.py  clean_history.sh  package-lock.json  pyproject.toml
dashboard/: package.json  tailwind.config.js  tsconfig.json
platform/api/: main.py
platform/api/routers/: conflicts.py  decisions.py  metrics.py
platform/api/services/: explanation_exporter.py
sdk/python/agentability/: __init__.py  models.py  tracer.py
sdk/python/agentability/analyzers/: __init__.py  causal_graph.py  conflict_analyzer.py  cost_analyzer.py  drift_detector.py  lineage_tracer.py  provenance.py
sdk/python/agentability/capability/: __init__.py  scorer.py
sdk/python/agentability/integrations/: __init__.py  anthropic_sdk.py  autogen.py  crewai.py  langchain.py  llamaindex.py
sdk/python/agentability/memory/: __init__.py  episodic_tracker.py  semantic_tracker.py  working_tracker.py
sdk/python/agentability/metrics/: __init__.py  conflict_metrics.py  decision_metrics.py  llm_metrics.py  memory_metrics.py
sdk/python/agentability/policies/: __init__.py  evaluator.py
sdk/python/agentability/sampling/: __init__.py  samplers.py
sdk/python/agentability/storage/: __init__.py  sqlite_store.py
sdk/python/agentability/utils/: __init__.py  logger.py  serialization.py  validation.py
sdk/python/agentability/versioning/: __init__.py  version_tracker.py
sdk/python/examples/: basic_usage.py  multi_agent_system.py
