[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentability"
version = "0.1.0"
description = "The Observability Standard for Production AI Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Agentability Contributors", email = "hello@agentability.io"}
]
maintainers = [
    {name = "Agentability Contributors", email = "hello@agentability.io"}
]
keywords = [
    "ai",
    "agents",
    "observability",
    "monitoring",
    "llm",
    "multi-agent",
    "machine-learning",
    "mlops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
    "pre-commit>=3.3.0",
]

# Storage backends
sqlite = []  # Built-in
duckdb = [
    "duckdb>=0.9.0",
]
timescaledb = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]
all-storage = [
    "duckdb>=0.9.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]

# Framework integrations
langchain = [
    "langchain>=0.1.0",
]
crewai = [
    "crewai>=0.1.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
llamaindex = [
    "llama-index>=0.9.0",
]
all-integrations = [
    "langchain>=0.1.0",
    "crewai>=0.1.0",
    "pyautogen>=0.2.0",
    "llama-index>=0.9.0",
]

# Platform components
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]
workers = [
    "celery>=5.3.0",
    "redis>=5.0.0",
]
all-platform = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

# Complete installation
all = [
    "duckdb>=0.9.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "langchain>=0.1.0",
    "crewai>=0.1.0",
    "pyautogen>=0.2.0",
    "llama-index>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://agentability.io"
Documentation = "https://docs.agentability.io"
Repository = "https://github.com/agentability/agentability"
"Bug Tracker" = "https://github.com/agentability/agentability/issues"
Changelog = "https://github.com/agentability/agentability/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "sdk/python"}

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["agentability*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=agentability --cov-report=term-missing"
testpaths = [
    "sdk/python/tests",
]
pythonpath = [
    "sdk/python"
]

[tool.coverage.run]
source = ["sdk/python/agentability"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
    "too-few-public-methods",
    "missing-module-docstring",
]

[tool.pylint.format]
max-line-length = 88
